// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag should have a link 1`] = `
<scale-tag href="#">
  <mock:shadow-root>
    <style>
      .tag {
  border: 1px solid transparent;
  display: inline-flex;
  outline: none;
  padding: 0 10px;
  text-align: center;
  transition: all 0.15s ease-in-out;
  align-items: center;
  white-space: nowrap;
  border-radius: 4px;
  vertical-align: baseline;
  justify-content: center;
  font-size: 1rem;
  line-height: 1.5;
  background: #262626;
  color: #FFF;
  --icon-color: #FFF;
  font-weight: 700;
}
.tag:not(.tag--disabled) {}
.tag:not(.tag--disabled) scale-icon {}
.tag:not(.tag--disabled) scale-icon:hover {
  --icon-color: #CB0068;
}
.tag--dismissable {
  padding-right: 0;
}
.tag--dismissable button {
  border: none;
  cursor: pointer;
  height: 24px;
  margin: 0;
  outline: none;
  padding: 0;
  background: transparent;
  margin-left: 2px;
  border-radius: 4px;
}
.tag--dismissable scale-icon {}
.tag--dismissable scale-icon svg {
  outline: none;
}
.tag--dismissable button:focus {
  border: 1px solid white;
  background: black;
  box-shadow: 0 0 0 2px #009DE0;
}
.tag--dismissable button:hover {
  background: black;
}
.tag--dismissable button:focus scale-icon {
  top: -1px;
  position: relative;
}
.tag--size-small {
  padding: 0 8px;
  font-size: 0.75rem;
  line-height: 1.6;
}
.tag--size-small.tag--dismissable {
  padding-right: 0;
}
.tag--size-small.tag--dismissable button {
  height: 20px;
}
.tag--variant-secondary {
  background: #00739F;
}
.tag--variant-secondary.tag--disabled {
  opacity: 0.5;
  background: #00739F;
  color: #FFF;
  --icon-color: #FFF;
}
.tag--link {
  text-decoration: none;
}
.tag--link:focus {
  border: 1px solid white;
  box-shadow: 0 0 0 2px #009DE0;
}
.tag--link.tag--variant-secondary {
  background: #00739F;
}
.tag--link.tag--variant-secondary:hover {
  background: #00739F;
}
.tag--link.tag--variant-secondary:focus {
  border: 1px solid white;
  background: #00739F;
}
.tag--disabled {
  color: #A4A4A4;
  cursor: not-allowed;
  --icon-color: #A4A4A4;
  background: #D0D0D0;
}
.tag--disabled button {
  cursor: not-allowed;
  background: #D0D0D0;
}
.tag--disabled button:hover {
  cursor: not-allowed;
  background: #D0D0D0;
}
    </style>
    <a class="tag--link tag" href="#" target="_self">
      <slot></slot>
    </a>
  </mock:shadow-root>
  Label
</scale-tag>
`;

exports[`Tag should match snapshot 1`] = `
<scale-tag>
  <mock:shadow-root>
    <style>
      .tag {
  border: 1px solid transparent;
  display: inline-flex;
  outline: none;
  padding: 0 10px;
  text-align: center;
  transition: all 0.15s ease-in-out;
  align-items: center;
  white-space: nowrap;
  border-radius: 4px;
  vertical-align: baseline;
  justify-content: center;
  font-size: 1rem;
  line-height: 1.5;
  background: #262626;
  color: #FFF;
  --icon-color: #FFF;
  font-weight: 700;
}
.tag:not(.tag--disabled) {}
.tag:not(.tag--disabled) scale-icon {}
.tag:not(.tag--disabled) scale-icon:hover {
  --icon-color: #CB0068;
}
.tag--dismissable {
  padding-right: 0;
}
.tag--dismissable button {
  border: none;
  cursor: pointer;
  height: 24px;
  margin: 0;
  outline: none;
  padding: 0;
  background: transparent;
  margin-left: 2px;
  border-radius: 4px;
}
.tag--dismissable scale-icon {}
.tag--dismissable scale-icon svg {
  outline: none;
}
.tag--dismissable button:focus {
  border: 1px solid white;
  background: black;
  box-shadow: 0 0 0 2px #009DE0;
}
.tag--dismissable button:hover {
  background: black;
}
.tag--dismissable button:focus scale-icon {
  top: -1px;
  position: relative;
}
.tag--size-small {
  padding: 0 8px;
  font-size: 0.75rem;
  line-height: 1.6;
}
.tag--size-small.tag--dismissable {
  padding-right: 0;
}
.tag--size-small.tag--dismissable button {
  height: 20px;
}
.tag--variant-secondary {
  background: #00739F;
}
.tag--variant-secondary.tag--disabled {
  opacity: 0.5;
  background: #00739F;
  color: #FFF;
  --icon-color: #FFF;
}
.tag--link {
  text-decoration: none;
}
.tag--link:focus {
  border: 1px solid white;
  box-shadow: 0 0 0 2px #009DE0;
}
.tag--link.tag--variant-secondary {
  background: #00739F;
}
.tag--link.tag--variant-secondary:hover {
  background: #00739F;
}
.tag--link.tag--variant-secondary:focus {
  border: 1px solid white;
  background: #00739F;
}
.tag--disabled {
  color: #A4A4A4;
  cursor: not-allowed;
  --icon-color: #A4A4A4;
  background: #D0D0D0;
}
.tag--disabled button {
  cursor: not-allowed;
  background: #D0D0D0;
}
.tag--disabled button:hover {
  cursor: not-allowed;
  background: #D0D0D0;
}
    </style>
    <span class="tag">
      <slot></slot>
    </span>
  </mock:shadow-root>
  Label
</scale-tag>
`;
